Working with REST API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!--Login Error Messages-->
     <string name="login_error_msg_empty_email_mobile">Please enter your email or mobile number</string>
     <string name="login_error_msg_empty_password">Please enter your password</string>
+    <string name="login_error_msg_login_error">Email or password was wrong !!</string>
 
     <!--Login Page - Register Section-->
     <string name="do_not_have_account">Don\'t have an account?</string>
